tests/language_modules/11_errors_results/valid/result_error_return.vf
module ResultErrorReturn

error NotFound

function load() returns Result<Integer, NotFound>
is
    return error NotFound
end load

end ResultErrorReturn