tests/language_modules/11_errors_results/invalid_semantics/unknown_result_error_type.vf
module UnknownResultErrorType

function load() returns Result<Integer, MissingError>
is
    return ok 1
end load

end UnknownResultErrorType